--- a/templates/backoffice/quote/browse.html.twig
+++ b/templates/backoffice/quote/browse.html.twig
@@ -6,12 +6,14 @@
 
 <main>
     <div class="main-content">
-    <h1>Liste des citations</h1>
+        <h1>Liste des citations</h1>
     </div>
 
-    <a href="{{ path('app_backoffice_quote_add') }}"class="btn btn-primary">Créer une nouvelle citation</a>
+     <div class="container  ">
 
-    <table class="table">
+        <a href="{{ path('app_backoffice_quote_add') }}"class="btn btn-primary">Créer une nouvelle citation</a>
+
+    <table class="table  table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -40,6 +42,9 @@
         {% endfor %}
         </tbody>
     </table>
+
+    </div>
+
 </main>
     
 {% endblock %}
