--- a/templates/backoffice/personage/add.html.twig
+++ b/templates/backoffice/personage/add.html.twig
@@ -6,12 +6,13 @@
 
 <main>
     <div class="main-content">
-    <h1>Créer un nouveau personnage</h1>
+         <h1>Créer un nouveau personnage</h1>
     </div>
-
+     <div class="container  ">
     <a href="{{ path('app_backoffice_personage_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('backoffice/personage/_form.html.twig') }}
+     </div>
 </main>
     
 {% endblock %}
