--- a/templates/backoffice/personage/edit.html.twig
+++ b/templates/backoffice/personage/edit.html.twig
@@ -8,11 +8,12 @@
 <div class="main-content">
     <h1>Modifier un Personnage</h1>
     </div>
-
+    <div class="container  ">
     <a href="{{ path('app_backoffice_personage_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('backoffice/personage/_form.html.twig', {'button_label': 'Update'}) }}
 
+    </div>
 </main>  
 
     
