--- a/templates/backoffice/personage/read.html.twig
+++ b/templates/backoffice/personage/read.html.twig
@@ -8,6 +8,8 @@
     <div class="main-content">
     <h1>Fiche personnage</h1>
     </div>
+
+     <div class="container  ">
     <a href="{{ path('app_backoffice_personage_browse') }}"class="btn btn-primary">Retour à la liste</a>
 
     <table class="table">
@@ -40,6 +42,8 @@
     <a href="{{ path('app_backoffice_personage_edit', {'id': personage.id}) }}"class="btn btn-warning">Modifier</a>
 
     {{ include('backoffice/personage/_delete_form.html.twig') }}
+
+    </div>
 
 </main>
 
