--- a/templates/backoffice/quote/add.html.twig
+++ b/templates/backoffice/quote/add.html.twig
@@ -6,12 +6,16 @@
 
 <main>
     <div class="main-content">
-    <h1>Créer une nouvelle citation</h1>
+        <h1>Créer une nouvelle citation</h1>
     </div>
+
+     <div class="container  ">
 
     <a href="{{ path('app_backoffice_quote_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('backoffice/quote/_form.html.twig') }}
+
+     </div >
 
 </main>    
 {% endblock %}
