--- a/templates/backoffice/quote/edit.html.twig
+++ b/templates/backoffice/quote/edit.html.twig
@@ -6,14 +6,16 @@
 
 <main>
     <div class="main-content">
-    <h1>Modifier une citation</h1>
+        <h1>Modifier une citation</h1>
     </div>
+
+     <div class="container  ">
 
       <a href="{{ path('app_backoffice_quote_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
-    {{ include('backoffice/quote/_form.html.twig', {'button_label': 'Update'}) }}
+      {{ include('backoffice/quote/_form.html.twig', {'button_label': 'Update'}) }}
 
-  
+     </div>
 </main>
     
 {% endblock %}
