--- a/templates/backoffice/quote/read.html.twig
+++ b/templates/backoffice/quote/read.html.twig
@@ -9,6 +9,8 @@
     <h1>Fiche de citation</h1>
     </div>
 
+     <div class="container  ">
+
     <a href="{{ path('app_backoffice_quote_browse') }}"class="btn btn-primary">Retour à la liste</a>
 
     <table class="table">
@@ -41,7 +43,7 @@
     <a href="{{ path('app_backoffice_quote_edit', {'id': quote.id}) }}"class="btn btn-warning">Modifier</a>
 
     {{ include('backoffice/quote/_delete_form.html.twig') }}
-
+    </div>
 </main>   
 
 {% endblock %}
