--- a/templates/backoffice/episode/browse.html.twig
+++ b/templates/backoffice/episode/browse.html.twig
@@ -29,7 +29,7 @@
                     <td>{{ episode.title }}</td>
                     <td>{{ episode.number }}</td>
                     <td>
-                        <a href="{{ path('app_backoffice_episode_show', {'id': episode.id}) }}" class="btn btn-success">voir</a>
+                        <a href="{{ path('app_backoffice_episode_read', {'id': episode.id}) }}" class="btn btn-success">voir</a>
                         <a href="{{ path('app_backoffice_episode_edit', {'id': episode.id}) }}" class="btn btn-warning">Modifier</a>
                     </td>
                 </tr>
@@ -43,12 +43,14 @@
 
             </tbody>
         </table>
-        <div class="card mt-3 mb-3"> 
-        <div class="card-body text-bg-secondary">
-        {{ knp_pagination_render(pagination) }}
+        <div class="mb-3"> 
+        
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
+            </div>
         {# !  https://github.com/KnpLabs/KnpPaginatorBundle/blob/master/docs/templates.md #}
         </div>
-        </div>
+        
    </div>
 </main>   
     
