--- a/templates/frontoffice/personage/index.html.twig
+++ b/templates/frontoffice/personage/index.html.twig
@@ -6,14 +6,21 @@
 
 <main>
 
-    <div class="row row-cols-1 row-cols-md-4 m-3">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 m-3">
 
     {# now our array is pagination (from the controller) #}
     {% for character in pagination %}
         <div class="col mb-3">
             <a href="{{ path('app_frontoffice_personage_read', {"id" : character.id }) }}" class="nav-link">
             <div class="card">
+            {% if character.picture %}
                 <img src="{{ asset('img/personage/' ~ character.picture) }}" class="card-img-top" alt="{{ character.name }}" title="Crédits : {{ character.descriptionPicture }}">
+            {% else %}
+            <div class="card-img-top text-center">
+                <img src="{{ asset('img/icone.png')}}" alt="- pas de photo de disponible pour le moment -" class="icone">
+                <br>- pas de photo de disponible pour le moment -
+            </div>
+            {% endif %}
                 <div class="card-body">
                     <h6 class="card-title">{{ character.name }}</h6>
                 </div>
