modify hash password on bdd

--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -15,8 +15,8 @@
                 User-a-nom-tres-long
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Connexion</a></li>
-                    <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                    <li><a class="dropdown-item" href="{{ path("app_login") }}">Connexion</a></li>
+                    <li><a class="dropdown-item" href="{{ path("app_logout") }}">Déconnexion</a></li>
                     <li><a class="dropdown-item" href="#">Profil</a></li>
                 </ul>
             </li>
