error 404 and 403 ok

--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>403 : {{ exception.message }}</h1>
+    <h1>403 : Accès refusé </h1>
+    <p> Dame Séli vous refuse l'accès. Et vous refuse aussi des couvertures. </p>
 {% endblock %}
