--- a/templates/frontoffice/season/read.html.twig
+++ b/templates/frontoffice/season/read.html.twig
@@ -4,28 +4,19 @@
 
 {% block body %}
 
-{# {% for %}
+{% for episode in season.episodes %}
 
-<div class="card mb-3">
+<div class="card m-3">
     <div class="card-header d-flex justify-content-between">
         <h6> Citation du {{ season.title }} </h6> 
-        <div class="d-flex" style="color: orange;">
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-half"></i>
-            <span class="ps-1">{{ season.quote.rating }}</span>
-        </div>
+    </div>
 
-    </div>
     <div class="card-body">
-    <i class="bi bi-heart-fill d-flex justify-content-end"></i>
     <blockquote class="blockquote mb-0">
-        <p>"{{ randomQuote.text }}"</p>
-        <footer class="blockquote-footer"> {{ randomQuote.name }},<cite title="Source Title"> <strong>{{ randomQuote.titleSeason}}</strong>, {{ randomQuote.titleEpisode}}.</cite></footer>
-    </blockquote>
+        <p>{{ episode.title }}</p>
     </div>
-</div> #}
+</div>
+
+{% endfor %}
 
 {% endblock %}
