--- a/templates/backoffice/quote/add.html.twig
+++ b/templates/backoffice/quote/add.html.twig
@@ -10,11 +10,11 @@
     </div>
 
      <div class="container  ">
-
-    <a href="{{ path('app_backoffice_quote_browse') }}" class="btn btn-primary">Retour à la liste</a>
-
-    {{ include('backoffice/quote/_form.html.twig') }}
-
+        <div class="contain">
+            <a href="{{ path('app_backoffice_quote_browse') }}" class="btn btn-primary">Retour à la liste</a>
+    
+            {{ include('backoffice/quote/_form.html.twig') }}
+        </div>
      </div >
 
 </main>    
