--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -11,8 +11,13 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="{{ asset('/img/icone.png') }}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                User-a-nom-tres-long
+                {% if app.user %}
+                    <img src="{{ asset('img/icone.png') }}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <span>{{app.user.email}}</span>
+                {% else %}
+                    <span>Anonyme</span>
+                    <i class="bi bi-person-square"></i>
+                {% endif %}
                 </a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="{{ path("app_login") }}">Connexion</a></li>
