--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -1,6 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>403 : Accès refusé </h1>
-    <p> Dame Séli vous refuse l'accès. Et vous refuse aussi des couvertures. </p>
+<main>
+
+    <div>
+        <div class="main-content text-center">
+        <h1>403 : Accès refusé </h1>
+         </div>
+
+        <div class="text-center">
+        <p> Dame Séli vous refuse l'accès. Et vous refuse aussi des couvertures. </p>
+        </div>
+
+   
+    </div>
+    </main>
 {% endblock %}
