--- a/templates/backoffice/episode/_form.html.twig
+++ b/templates/backoffice/episode/_form.html.twig
@@ -1,14 +1,5 @@
 {{ form_start(form) }}
-    {# {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button> #}
-    <main>
-    <div class="main-content">
-        <h1>Créer un nouvel épisode</h1>
-    </div>  
-    <div class="container  ">
-    <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">retour à la liste</a>
-
-    {{ include('backoffice/episode/_form.html.twig') }}
-    </div>
-</main> 
+     {{ form_widget(form) }}
+    <button class="btn btn-success">{{ button_label|default('Valider') }}</button> 
+    
 {{ form_end(form) }}
