--- a/templates/backoffice/episode/add.html.twig
+++ b/templates/backoffice/episode/add.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Episode{% endblock %}
+{% block title %}Kaamel'O'tt - Episodes{% endblock %}
 
 {% block body %}
-    <h1>Create new Episode</h1>
-
+<main>
+    <div class="main-content">
+        <h1>Create new Episode</h1>
+    </div>  
+    <div class="container  ">
+    <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">retour à la liste</a>
     {{ include('backoffice/episode/_form.html.twig') }}
-
-    <a href="{{ path('app_backoffice_episode_browse') }}">back to list</a>
+    </div>
+</main>    
 {% endblock %}
