--- a/templates/backoffice/episode/edit.html.twig
+++ b/templates/backoffice/episode/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Episode{% endblock %}
+{% block title %}Kaamel'O'tt - Episodes{% endblock %}
 
 {% block body %}
     <h1>Edit Episode</h1>
 
     {{ include('backoffice/episode/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_backoffice_episode_browse') }}">back to list</a>
+    <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">retour à la liste</a>
 
     {{ include('backoffice/episode/_delete_form.html.twig') }}
 {% endblock %}
