--- a/templates/backoffice/episode/read.html.twig
+++ b/templates/backoffice/episode/read.html.twig
@@ -1,11 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Episode{% endblock %}
+{% block title %}Kaamel'O'tt - Episodes{% endblock %}
 
 {% block body %}
+<main>
+    
+    <div class="main-content">
     <h1>Episode</h1>
+    </div>
 
-    <table class="table">
+    <div class="container  ">
+        <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">Retour à la liste</a>
+        <table class="table table-striped">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -21,10 +27,10 @@
             </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('app_backoffice_episode_browse') }}">back to list</a>
-
-    <a href="{{ path('app_backoffice_episode_edit', {'id': episode.id}) }}">edit</a>
+   </div>
+</main>    
+ 
+    <a href="{{ path('app_backoffice_episode_edit', {'id': episode.id}) }}" class="btn btn-warning">Modifier</a>
 
     {{ include('backoffice/episode/_delete_form.html.twig') }}
 {% endblock %}
