css 404 and 403 ok

--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -5,7 +5,7 @@
 
 <div>
 
-     <div class="main-content text-center">
+     <div class="main-content ">
     <h1>Erreur 404: non trouvé <h1>
      </div>
      <div class="text-center">
