--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -126,3 +126,9 @@ figcaption {
         font-size: 0.8rem;
     }
 }
+
+.main-content {
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
