--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -4,7 +4,7 @@
 <main>
 
     <div>
-        <div class="main-content text-center">
+        <div class="main-content ">
         <h1>403 : Accès refusé </h1>
          </div>
 
