--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -12,12 +12,11 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {% if app.user %}
-                
                     <img src="/img/{{app.user.avatar.icon}}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     <span>{{app.user.email}}</span>
                 {% else %}
+                    <img src="{{ asset('img/icone.png') }}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     <span>Anonyme</span>
-                    <i class="bi bi-person-square"></i>
                 {% endif %}
                 </a>
                 <ul class="dropdown-menu">
