Some little things were missing in the QUizz entity

--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -50,7 +50,7 @@
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Liste des Quizz</h5>
-                        <a href="{{ path('app_backoffice_home')}}" class="btn btn-success">voir</a>
+                        <a href="{{ path('app_backoffice_quizz_browse')}}" class="btn btn-success">voir</a>
                     </div>
                 </div>
             </div> 
