BREAD on Actor almost done

--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -12,7 +12,7 @@
 
     <div class="container  ">
 
-        <div class="row gy-5 main-bo">
+        <div class="row gy-5 main-bo row-cols-3 justify-content-start">
             <div class="col" >
                 <div class="card " style="width: 18rem;">
                     <div class="card-body">
@@ -70,6 +70,14 @@
                     </div>
                 </div>
             </div>    
+            <div class="col" >   
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Liste des Acteurs</h5>
+                        <a href="{{ path('app_backoffice_actors_browse') }}" class="btn btn-success">voir</a>
+                    </div>
+                </div>
+            </div> 
     </div>
 </div>
 
