--- a/templates/backoffice/quizz/read.html.twig
+++ b/templates/backoffice/quizz/read.html.twig
@@ -13,7 +13,7 @@
 
     <a href="{{ path('app_backoffice_quizz_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
-    <table class="table">
+    <table class="table table-striped">
         <tbody>
             <tr>
                 <th>Id</th>
