--- a/public/css/styles_back.css
+++ b/public/css/styles_back.css
@@ -36,7 +36,8 @@ h1, h2, h3, h4, h5, h6, .title {
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: rgba(243, 245, 245, 0.6);
+    /* background-color: rgba(243, 245, 245, 0.6); */
+    background-color:#6c757dbe;
 }
 
 .main {
