--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -25,7 +25,7 @@
         <i class="bi bi-heart-fill d-flex justify-content-end"></i>
         <blockquote class="blockquote mb-0">
             <p>"{{ randomQuote.text }}"</p>
-            <footer class="blockquote-footer"> {{ randomQuote.name }},<cite title="Source Title"> <strong>{{ randomQuote.titleSeason}}</strong>, {{ randomQuote.titleEpisode}}.</cite></footer>
+            <footer class="blockquote-footer"> {{ randomQuote.personage.name }},<cite title="Source Title"> <strong>{{ randomQuote.episode.season.title}}</strong>, {{ randomQuote.episode.title}}.</cite></footer>
         </blockquote>
         </div>
     </div>
