--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,60 +1,75 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-            <!-- link bootstrap & bootstrap icon -->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+        <!-- link bootstrap & bootstrap icon -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
             
-            <!-- link font titres  -->
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cormorant:wght@400;500;700&display=swap" rel="stylesheet">
+        <!-- link font titres  -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cormorant:wght@400;500;700&display=swap" rel="stylesheet">
 
 
-            <!-- link css  -->
-            {% if app.request.pathinfo starts with '/backoffice' %}
+        <!-- link css  -->
+        {% if app.request.pathinfo starts with '/backoffice' %}
             <link href="{{ asset('css/styles_back.css') }}" rel="stylesheet"> 
-            {% else %}
+        {% else %}
             <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
-            {% endif %}
-            
-            
-            {# favicon #}
-            <link rel="icon" href="{{ asset('img/other/favicon.png') }}">
+        {% endif %}
+
+        {% if app.request.pathinfo starts with '/quizz' %}
+            <link href="{{ asset('css/styles.css') }}" rel="stylesheet"> 
+            <link href="{{ asset('css/styles_quizz.css')}}" rel="stylesheet">
+            <link href="{{ asset('css/lib.css')}}" rel="stylesheet">
+        {% else %}
+            <link href="{{ asset('css/styles.css') }}" rel="stylesheet">    
+        {% endif %}
 
             
+            
+        {# favicon #}
+        <link rel="icon" href="{{ asset('img/other/favicon.png') }}">
 
-            <title>{% block title %}Kaamel'O'tt{% endblock %}</title>
+        <title>{% block title %}Kaamel'O'tt{% endblock %}</title>
    
     </head>
 
     <body>
         <div class="container">
 
-        {% if app.request.pathinfo starts with '/backoffice' %}
-            {{ include('partials/_nav_back.html.twig') }}
-        {% else %}
-            {{ include('partials/_nav.html.twig') }}
-        {% endif %}
+            {% if app.request.pathinfo starts with '/backoffice' %}
+                {{ include('partials/_nav_back.html.twig') }}
+            {% else %}
+                {{ include('partials/_nav.html.twig') }}
+            {% endif %}
 
-        {% block body %}{% endblock %}
+            {% block body %}{% endblock %}
 
             <footer>
-            
+                
                 <div class="footer">
                     <a href="{{ path("app_home_legalNotice") }}" class="nav-link link-opacity-25-hover" role="button" >Mentions légales</a> <a href="{{ path("app_home_iconographyIndex") }}" class="nav-link link-opacity-25-hover" role="button" >Iconographies</a>
                     <a href="#" class="nav-link">Copyright &copy; 2023</a>
                 </div>
-                    <p>Made by Edith, Céline, Angèle and Aurélie.</p>
-                
+                <p>Made by Edith, Céline, Angèle and Aurélie.</p>
+                    
             </footer>
 
-        <!-- script bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+            <!-- script bootstrap -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+
+            <!-- Scripts -->
+            {% if app.request.pathinfo starts with '/quizz' %}
+                <script src="{{ asset('main.js')}}"></script>
+                <script src="{{ asset('js/lib.js')}}"></script>
+                <script src="{{ asset('js/app.js')}}"></script>
+            {% endif %}
+            
         </div>
     </body>
 </html>
