--- a/templates/frontoffice/personage/read.html.twig
+++ b/templates/frontoffice/personage/read.html.twig
@@ -46,26 +46,7 @@
 
                 {% for quote in character.quotes %}
 
-                <div class="card mb-3">
-                    <div class="card-header d-flex justify-content-end">
-                    {# TODO: gérer la coloration des étoiles en fonction de la note #}
-                        <div class="d-flex" style="color: orange;">
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star"></i>
-                        <span class="ps-1">{{ quote.rating }}</span>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <i class="bi bi-heart d-flex justify-content-end"></i>
-                        <blockquote class="blockquote mb-0">
-                        <p>"{{ quote.text }}"</p>
-                        <footer class="blockquote-footer">{{ character.name }}, <cite title="Source Title"><strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
-                        </blockquote>
-                    </div>
-                </div>
+                {% include '_card_quote.html.twig' %}
 
                 {% endfor %}
 
