--- a/templates/frontoffice/quote/index.html.twig
+++ b/templates/frontoffice/quote/index.html.twig
@@ -17,21 +17,36 @@
             <div class="card-header d-flex justify-content-end">
 
                 <div class="d-flex" style="color: orange;">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-half"></i>
+                    {% set rating = quote.rating %}
+                            {# round(0,'floor') give the round number whith zero decimal so it give us the number of the full stars #}
+                            {% set biStarFill = rating|round(0, 'floor') %}
+                            {# if rating is a float between an integer+0.5 and the next integer "biStarHalf" #}
+                            {% set biStarHalf = rating - biStarFill >= 0.5 %}
+                            {% set biStar = 5 - biStarFill - (biStarHalf ? 1 : 0) %}
+                            {# {% dump(biStarFill)%}
+                            {% dump(biStarHalf)%}
+                            {% dump(biStar)%} #}
+                            {% for i in 1..5 %}
+                                {% if i <= biStarFill %}
+                                    {{ '<i class="bi bi-star-fill"></i>' }}
+                                {% elseif i == biStarFill + 1 and biStarHalf %}
+                                    {{ '<i class="bi bi-star-half"></i>' }}
+                                {% else %}
+                                    {{ '<i class="bi bi-star"></i>' }}
+                                {% endif %}
+                            {% endfor %}
                     <span class="ps-1">{{ quote.rating }}</span>
                 </div>
 
             </div>
             <div class="card-body">
-            <i class="bi bi-heart-fill d-flex justify-content-end"></i>
-            <blockquote class="blockquote mb-0">
-                <p>"{{ quote.text }}"</p>
-                <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
-            </blockquote>
+            
+                <blockquote class="blockquote mb-0">
+                    <p>"{{ quote.text }}"</p> 
+                    <span class="bi bi-bookmark-heart fs-1 d-flex justify-content-end "></span>
+                    <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
+                    
+                </blockquote>
             </div>
         </div>
         {% endfor %}
