--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -26,7 +26,6 @@
                 </ul>
             </li>
         </ul>
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,7 +34,7 @@
             <li class="nav-item">
             <a class="nav-link {{ (app.request.get('_route') is same as('default')) ? 'active' : '' }}" aria-current="page" href="{{ path("default") }}">Accueil</a>
             </li>
-
+  
             <li class="nav-item">
             <a class="nav-link {{ (app.request.get('_route') is same as('app_frontoffice_personages_browse')) ? 'active' : '' }}" aria-current="page" href="{{ path("app_frontoffice_personages_browse") }}">Personnages</a>
             </li>
@@ -63,8 +62,10 @@
                 Quizz
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{{ path("app_frontoffice_quizz_index")}}">Quizz 1</a></li>
-                <li><a class="dropdown-item" href="#">Quizz 2</a></li>
+                {# we loop here to get all our quizzs #}
+                {% for quizz in quizzsList.getQuizzs %}
+                <li><a class="dropdown-item" href="{{ path("app_frontoffice_quizz_read", {"id" : quizz.id })}}">{{ quizz.title }}</a></li>
+                {% endfor %}
             </ul>
             </li>
 
