--- a/templates/backoffice/episode/browse.html.twig
+++ b/templates/backoffice/episode/browse.html.twig
@@ -35,7 +35,7 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">no records found</td>
+                    <td colspan="4">Pas d'épisode trouvé !</td>
                 </tr>
             {% endfor %}
 
