--- a/templates/backoffice/episode/edit.html.twig
+++ b/templates/backoffice/episode/edit.html.twig
@@ -3,11 +3,21 @@
 {% block title %}Kaamel'O'tt - Episodes{% endblock %}
 
 {% block body %}
-    <h1>Edit Episode</h1>
+<main>
 
-    {{ include('backoffice/episode/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="main-content">
+    <h1>Modifier un épisode</h1>
+    </div>
+
+    <div class="container">
 
     <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">retour à la liste</a>
 
+    {{ include('backoffice/episode/_form.html.twig', {'button_label': 'Modifier'}) }}
+
+    
     {{ include('backoffice/episode/_delete_form.html.twig') }}
+
+    </div>
+</main>  
 {% endblock %}
