bread Avatar on process

--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -78,14 +78,14 @@
                     </div>
                 </div>
             </div>    
-            {# <div class="col" >   
+            <div class="col" >   
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Liste des Avatars</h5>
                         <a href="{{ path('app_backoffice_avatar_browse') }}" class="btn btn-success">voir</a>
                     </div>
                 </div>
-            </div> #}
+            </div>
     </div>
 </div>
 
