SearchController for the backoffice with session / paginator

--- a/templates/backoffice/search/index.html.twig
+++ b/templates/backoffice/search/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SearchController!{% endblock %}
+{% block title %}Résultats recherche{% endblock %}
 
 {% block body %}
 <main>
     <div class="main-content">
-    <h1>Résultats de {{ words }} classés par personnage</h1>
+    <h1>Résultats de {{ search }} classés par personnage</h1>
     </div>
 
      <div class="container  ">
