--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -67,7 +67,7 @@
 
         </ul>
         <form class="d-flex" role="search" method="post" action="{{ path('app_backoffice_search') }}">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searchBack">
+            <input class="form-control me-2" type="search" placeholder="Entrez votre recherche" aria-label="Search" name="searchBack">
             <button class="btn" type="submit"><img src="{{ asset('/img/loupe.png') }}" alt="search-icon" width="24" height="24"></button>
         </form>
         </div>
