--- a/templates/_card_quote.html.twig
+++ b/templates/_card_quote.html.twig
@@ -32,7 +32,50 @@
     
         <blockquote class="blockquote mb-0">
             <p>"{{ quote.text }}"</p> 
-            <span class="bi bi-bookmark-heart fs-1 d-flex justify-content-end "></span>
+                <div>
+                {# We check if the user is connected, because if not, he can't put quotes in favorite #}
+                {% if is_granted("ROLE_USER") %}
+                            {% set isFavorite = false %}
+                
+                    {# We loop on the favorites of the quote #}
+                    {% for favoris in quote.favorites %}
+                        {# If there's a match, it means the user has the quote in his favorites #}
+                        {% if favoris.user.id == app.user.id %}
+                            {% set isFavorite = true %}
+                        {% endif %}
+                    {% endfor %}
+                                {# <a href="{{ path('remove_favoris', {id: quote.id}) }}"><i class="bi bi-bookmark-heart fs-1 d-flex justify-content-end"></i></a> #}
+                        
+                    {% if isFavorite %}
+                       <i class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></i>
+                    {% else %}
+                       <a href="{{ path('app_frontoffice_quotes_addFavorite', {id: quote.id}) }}"><i class="bi bi-bookmark-heart fs-1 d-flex justify-content-end"></i></a>
+                    {% endif %}
+
+
+                {% endif %}
+{# 
+                        {% dump(app.user.id) %}
+                        {% dump(favoris.user.id) %}
+
+                         <i class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></i> #}
+
+
+
+
+                        {# <i class="bi bi-bookmark-heart fs-1 d-flex justify-content-end"></i> #}
+                        
+                                {# <a href="{{ path('add_favoris', {id: quote.id}) }}"><i class="bi bi-bookmark-heart fs-1 d-flex justify-content-end"></i></a> #}
+                       
+                    {# If there are no favorites for the quote, we still want a heart to appear #}
+                    
+                   
+                                {# <a href="{{ path('add_favoris', {id: quote.id}) }}"><i class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></i></a> #}
+
+                  
+                
+                </div>
+            
             <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
             
         </blockquote>
