request dynamization for API URL

--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -8,8 +8,10 @@
 
     <h2 class="main__item">Kaamel'O'tt {{ quizz.title }}</h2>
     <div id="app-container">
-        <button id="start-btn">Start</button>        
+        <button id="start-btn">Start</button>
+        <div id="score-container">Score: 0</div>        
         <div id="questions-container"></div>
+
     </div>
 
 </main>
