--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,6 +71,11 @@ footer > a:hover {
     text-shadow: 4px 4px 10px black;
 } 
 
+a {
+    text-decoration: none; 
+    color: black;
+}
+
 .main__item {
     margin: 20px 0;
     text-align: center;
