modify Quizz css for the score-container

--- a/public/css/styles_quizz.css
+++ b/public/css/styles_quizz.css
@@ -12,7 +12,7 @@
   }
     
   #score-container {
-    position: fixed;
+    position: sticky;
     right: 40px;
     top: 40px;
     display: flex;
