--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -9,7 +9,7 @@
     <h2 class="main__item">Kaamel'O'tt {{ quizz.title }}</h2>
     <div id="app-container">
         <button id="start-btn">Start</button>
-        <div id="score-container">Score: 0</div>        
+        <button id="score-container">Score: 0</button>        
         <div id="questions-container"></div>
 
     </div>
