--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -10,8 +10,19 @@
     <div id="app-container">
         <button id="start-btn">Start</button>
         <button id="score-container">Score: 0</button>        
-        <div id="questions-container"></div>
-
+        
+        <div id="questions-container">
+            <div id="question">
+                <h4 id="title"></h4>
+                <div id="answers"></div> 
+            </div>
+        </div>
+        <div id="resultat">
+            <div id="score"></div>
+            <div id="againButton"></div>
+        </div>
+        
+    </div>
     </div>
 
 </main>
