--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -73,8 +73,8 @@
             </li>       
 
         </ul>
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex" role="search" method="post" action="{{ path('app_frontoffice_search') }}">
+            <input class="form-control me-2" type="search" placeholder="Entrez votre recherche" aria-label="Search" name="searchFront" >
             <button class="btn" type="submit"><img src="{{ asset('img/loupe.png') }}" alt="search-icon" width="24" height="24"></button>
         </form>
         </div>
