description of season is dynamique now

--- a/templates/frontoffice/season/read.html.twig
+++ b/templates/frontoffice/season/read.html.twig
@@ -11,7 +11,7 @@
     <h2 class="main__item">{{ season.title }}</h2>
     <div class="col-lg-8 text-center">
 {# ! rajouter descriptif dans BDD #}
-<p>Le château de Kaamelott est achevé, la cour est établie, les choses sérieuses peuvent commencer. Une grande table ronde est construite, autour de laquelle les chevaliers se réuniront pour organiser la Quête du Graal, diriger le royaume, narrer leurs aventures victorieuses pour la gloire des dieux et du peuple. Tous les éléments sont réunis pour mener à bien la Quête. Du moins en théorie, car en pratique, le roi Arthur réalise bien vite que ceux qui l’entourent, s’ils ne manquent pas de motivation, ne vont pas toujours dans le même sens que lui, ni à la même vitesse.</p>
+<p>{{ season.description }}</p>
 
 
 
