--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -69,7 +69,7 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Favoris</a>
+            <a class="nav-link {{ (app.request.get('_route') is same as('app_frontoffice_favorite')) ? 'active' : '' }}" aria-current="page" href="{{ path("app_frontoffice_favorite") }}">Favoris</a>
             </li>       
 
         </ul>
