modifcation for randomQuote have to be check again

--- a/templates/_card_quote.html.twig
+++ b/templates/_card_quote.html.twig
@@ -76,7 +76,7 @@
                 
                 </div>
             
-            <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
+            <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, .</cite></footer>
             
         </blockquote>
     </div>
