--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -9,7 +9,48 @@
     <h2 class="main__item">La Citation du Moment</h2>
     {# todo dynamiser la page quand on aura la BDD fonctionnelle il faut aussi gérer rating et favorite #}
     {% set quote = randomQuote %}
-    {% include '_card_quote.html.twig' %}
+    <div class="card mb-3">
+        <div class="card-header d-flex justify-content-between">
+            <h6> La citation du moment </h6> 
+            <div class="d-flex" style="color: orange;">
+                {% set rating = quote.rating %}
+                    {# round(0,'floor') give the round number whith zero decimal so it give us the number of the full stars #}
+                    {% set biStarFill = rating|round(0, 'floor') %}
+                    {# if rating is a float between an integer+0.5 and the next integer "biStarHalf" #}
+                    {% set biStarHalf = rating - biStarFill >= 0.5 %}
+                    {% set biStar = 5 - biStarFill - (biStarHalf ? 1 : 0) %}
+                    {# {% dump(biStarFill)%}
+                    {% dump(biStarHalf)%}
+                    {% dump(biStar)%} #}
+                    {% for i in 1..5 %}
+                        {% if i <= biStarFill %}
+                            {{ '<i class="bi bi-star-fill"></i>' }}
+                        {% elseif i == biStarFill + 1 and biStarHalf %}
+                            {{ '<i class="bi bi-star-half"></i>' }}
+                        {% else %}
+                            {{ '<i class="bi bi-star"></i>' }}
+                        {% endif %}
+                    {% endfor %}
+                <span class="ps-1">{{ randomQuote.rating }}</span>
+            </div>
+
+        </div>
+        <div class="card-body">
+
+
+
+        <i class="bi bi-heart-fill d-flex justify-content-end"></i>
+
+
+
+
+        
+        <blockquote class="blockquote mb-0">
+            <p>"{{ randomQuote.text }}"</p>
+            <footer class="blockquote-footer"> {{ randomQuote.name }},<cite title="Source Title"> <strong>{{ randomQuote.titleSeason}}</strong>, {{ randomQuote.titleEpisode}}.</cite></footer>
+        </blockquote>
+        </div>
+    </div>
 
     <div class="text-center">
     <img class="img-fluid" src="./img/kamelott.jpeg">
