--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,9 +65,11 @@
 
             <!-- Scripts -->
             {% if app.request.pathinfo starts with '/quizz' %}
+            
                 <script src="{{ asset('main.js')}}"></script>
-                <script src="{{ asset('js/lib.js')}}"></script>
-                <script src="{{ asset('js/app.js')}}"></script>                
+                {# <script src="{{ asset('js/lib.js')}}"></script> #}
+                <script src="{{ asset('js/app.js')}}"></script>  
+                              
             {% endif %}
             
         </div>
