custom display Quizz and modify answers in bdd

--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -12,9 +12,9 @@
         <button id="score-container">Score: 0</button>        
         
         <div id="questions-container">
-            <div id="question">
+            <div id="question" class="question">
                 <h4 id="title"></h4>
-                <div id="answers"></div> 
+                <div id="answers" class="answers"></div> 
             </div>
         </div>
         <div id="resultat">
@@ -22,7 +22,6 @@
             <div id="againButton"></div>
         </div>
         
-    </div>
     </div>
 
 </main>
